--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-rename": "^1.2.3",
-    "gulp-tinypng": "^1.0.2"
+    "gulp-tinypng": "^1.0.2",
+    "gulp.spritesmith": "^6.9.0",
+    "merge-stream": "^1.0.1"
   },
   "dependencies": {
     "npm": "^6.1.0"
