--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-babel": "^7.0.1",
+    "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
+    "gulp-js-minify": "0.0.3",
     "gulp-rename": "^1.2.3",
     "gulp-tinypng": "^1.0.2",
     "gulp.spritesmith": "^6.9.0",
